--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
   "homepage": "https://github.com/Lidemy/mentor-program-4th#readme",
   "dependencies": {
     "normalize.css": "^8.0.1",
-    "request": "^2.88.2"
+    "request": "^2.88.2",
+    "sass": "^1.26.11"
   },
   "devDependencies": {
     "eslint": "^5.15.1",
@@ -39,6 +40,7 @@
     "eslint-plugin-react": "^7.12.4",
     "husky": "^1.3.1",
     "jest": "^26.1.0",
-    "lint-staged": "^8.1.5"
+    "lint-staged": "^8.1.5",
+    "webpack": "^4.44.2"
   }
 }
