edit package.json and .gitignore

--- a/homeworks/week17/hw1/package.json
+++ b/homeworks/week17/hw1/package.json
@@ -1,6 +1,7 @@
 {
   "name": "my-webpack-project",
   "version": "1.0.0",
+  "main": "app.js",
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
